# satur8

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PACKAGING.md  PLAN.md  README.md  ROADMAP.md
.copr/: Makefile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
assets/: gui-shot.sh
assets/gamescope/: Satur8.fx  Vibrance.fx
assets/gnome-extension/satur8@satur8.github.io/: extension.js  metadata.json
assets/gnome-extension/vibrance@vibrance.github.io/: extension.js
assets/kwin-effect/: CMakeLists.txt  dev.sh  metadata.json  sandbox-test-m2.sh  sandbox-test-m4.sh  sandbox-test.sh  satur8_effect.cpp  satur8_effect.h  vibrance_effect.cpp  vibrance_effect.h
assets/kwin-script/: metadata.json
assets/kwin-script/contents/code/: main.js
benchmarks/: README.md
benchmarks/cs2-kwin-20260626-144823/: runs.csv  runs.jsonl  summary.json  telemetry-after-off5-before-on5.txt  telemetry-after-off6-before-on6.txt  telemetry-after-off7-before-on7.txt  telemetry-after-on5-before-off6.txt  telemetry-after-on6-before-off7.txt  telemetry-final-after-on7.txt
benchmarks/cs2-kwin-20260626-144823/raw-console/: off1.txt  off2.txt  off3.txt  off4.txt  off5.txt  off6.txt  off7.txt  on1.txt  on2.txt  on3.txt  on4.txt  on5.txt  on6.txt  on7.txt
benchmarks/cs2-kwin-restart-20260626-163915/: session.json  telemetry-before-pair01-off-attempt01.txt
benchmarks/cs2-kwin-restart-20260626-164012/: session.json  telemetry-before-pair01-off-attempt01.txt
benchmarks/cs2-kwin-restart-20260626-164530/: pair01-off-attempt01-satur8-state.txt  session.json  telemetry-before-pair01-off-attempt01.txt
crates/backends/drm-ctm/: Cargo.toml
crates/backends/drm-ctm/src/: lib.rs
crates/backends/gamescope/: Cargo.toml
crates/backends/gamescope/src/: lib.rs
crates/backends/gnome-shell/: Cargo.toml
crates/backends/gnome-shell/src/: lib.rs
crates/backends/hyprland/: Cargo.toml
crates/backends/hyprland/src/: lib.rs
crates/backends/kwin/: Cargo.toml
crates/backends/kwin/src/: lib.rs
crates/backends/nv-control/: Cargo.toml
crates/backends/nv-control/src/: lib.rs
crates/satur8-backend/: Cargo.toml
crates/satur8-backend/src/: lib.rs
crates/satur8-cli/: Cargo.toml
crates/satur8-cli/src/: backend.rs  config.rs  main.rs  profile_cmd.rs  run.rs
crates/satur8-core/: Cargo.toml
crates/satur8-core/src/: ctm.rs  env.rs  lib.rs  profile.rs
crates/satur8-daemon/: Cargo.toml
crates/satur8-daemon/src/: main.rs
crates/satur8-gui/: Cargo.toml  build.rs
crates/satur8-gui/src/: main.rs  proc.rs  steam.rs
crates/satur8-gui/ui/: app.slint
crates/satur8-tray/: Cargo.toml
crates/satur8-tray/src/: main.rs
crates/vibrance-cli/: Cargo.toml
crates/vibrance-cli/src/: backend.rs  config.rs  main.rs  profile_cmd.rs  run.rs
crates/vibrance-core/: Cargo.toml
crates/vibrance-core/src/: ctm.rs  env.rs  lib.rs
crates/vibrance-daemon/: Cargo.toml
crates/vibrance-gui/: Cargo.toml
crates/vibrance-gui/src/: main.rs  proc.rs  steam.rs
crates/vibrance-gui/ui/: app.slint
crates/vibrance-tray/: Cargo.toml
packaging/: .SRCINFO  PKGBUILD  install.sh  release-notes.sh  release-tarball.sh  satur8-daemon.service  satur8.desktop  satur8.spec  source-tarball.sh  vibrance.desktop
packaging/copr/: README.md
scripts/: cs2-fps-benchmark-automation.py  generate-readme-assets.py  generate-release-image.py  release.sh
