[package]
name = "satur8-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared backend selection and restoration lifecycle for Satur8."

[dependencies]
satur8-core = { workspace = true }
satur8-kwin = { workspace = true }
satur8-drm-ctm = { workspace = true }
satur8-hyprland = { workspace = true }
satur8-nv-control = { workspace = true }
satur8-gnome = { workspace = true }
anyhow = { workspace = true }
signal-hook = "0.3"
