[package]
name = "vibrance-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The `vibrance` command-line tool."

[[bin]]
name = "vibrance"
path = "src/main.rs"

[dependencies]
vibrance-core = { workspace = true }
vibrance-kwin = { workspace = true }
vibrance-drm-ctm = { workspace = true }
vibrance-hyprland = { workspace = true }
vibrance-nv-control = { workspace = true }
vibrance-gnome = { workspace = true }
vibrance-gamescope = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
signal-hook = "0.3"
libc = "0.2"
