[package]
name = "vibrance-gui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Vibrance desktop app: pick a running game and set its per-game saturation, VibranceGUI-style."

[[bin]]
name = "vibrance-gui"
path = "src/main.rs"

[dependencies]
vibrance-core = { workspace = true }
vibrance-kwin = { workspace = true }
vibrance-drm-ctm = { workspace = true }
vibrance-hyprland = { workspace = true }
vibrance-nv-control = { workspace = true }
vibrance-gnome = { workspace = true }
anyhow = { workspace = true }
eframe = "0.34"
