[package]
name = "vibrance-gui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Vibrance desktop app: pick a running game and set its per-game saturation, with a clean Slint UI."
build = "build.rs"

[[bin]]
name = "vibrance-gui"
path = "src/main.rs"

[dependencies]
vibrance-core = { workspace = true }
vibrance-kwin = { workspace = true }
vibrance-drm-ctm = { workspace = true }
vibrance-hyprland = { workspace = true }
vibrance-nv-control = { workspace = true }
vibrance-gnome = { workspace = true }
slint = "1.16"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[build-dependencies]
slint-build = "1.16"
