[package]
name = "vibrance-tray"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "System-tray control for Vibrance (StatusNotifierItem): toggle and pick saturation/profiles."

[[bin]]
name = "vibrance-tray"
path = "src/main.rs"

[dependencies]
vibrance-core = { workspace = true }
vibrance-kwin = { workspace = true }
vibrance-drm-ctm = { workspace = true }
vibrance-hyprland = { workspace = true }
vibrance-nv-control = { workspace = true }
vibrance-gnome = { workspace = true }
anyhow = { workspace = true }
ksni = { version = "0.3", features = ["blocking"] }
