[package]
name = "vibrance-gnome"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GNOME Shell backend (B4) for Vibrance: drives the shipped shell extension's saturation shader over D-Bus."

[dependencies]
vibrance-core = { workspace = true }
zbus = { workspace = true }
anyhow = { workspace = true }
