[package]
name = "satur8-gnome"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GNOME Shell backend (B4) for Satur8: drives the shipped shell extension's saturation shader over D-Bus."

[dependencies]
satur8-core = { workspace = true }
zbus = { workspace = true }
anyhow = { workspace = true }
