[package]
name = "vibrance-hyprland"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hyprland backend (B3) for Vibrance: applies a saturation screen shader via hyprctl."

[dependencies]
vibrance-core = { workspace = true }
anyhow = { workspace = true }
