[package]
name = "satur8-hyprland"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hyprland backend (B3) for Satur8: applies a saturation screen shader via hyprctl."

[dependencies]
satur8-core = { workspace = true }
anyhow = { workspace = true }
