[package]
name = "vibrance-nv-control"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NVIDIA X11 backend (B5) for Vibrance: drives the proprietary driver's Digital Vibrance via nvidia-settings."

[dependencies]
vibrance-core = { workspace = true }
anyhow = { workspace = true }
